Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/Unique_SPR__c.object-meta.xml
<CustomObject>
    <description>This object contains the unique name of each spr. Uniqueness is valid for a specific project. This record goes for approval in the new revamp structure.</description>
    <label>Unique SPR</label>
    <nameField>
        <displayFormat>UN-{000}</displayFormat>
        <label>Unique Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unique SPRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>