Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Approval_date__c.field-meta.xml
<CustomField>
    <fullName>Approval_date__c</fullName>
    <label>Approval date</label>
    <type>Date</type>
</CustomField>