Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Approved_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date__c</fullName>
    <description>Captures the current date when the spr was approved or rejected</description>
    <formula>IF(ISPICKVAL( Approval_Status__c , &apos;Approved&apos;) ||  ISPICKVAL( Approval_Status__c , &apos;Rejected&apos;),
 TODAY() , NULL )</formula>
    <label>Approved/Rejected Date</label>
    <type>Date</type>
</CustomField>