Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Approved_Rejected_Date_WF__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Date_WF__c</fullName>
    <label>Approved/Rejected Date WF</label>
    <type>Date</type>
</CustomField>