Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Average_Discount_Provided__c.field-meta.xml
<CustomField>
    <fullName>Average_Discount_Provided__c</fullName>
    <description>According to this discount the approval goes to respective manager or jayant kumar</description>
    <formula>(( MRP_Post_Discount_Sum__c -  Net_Invoice_Value_APPL_Sum__c )/ MRP_Post_Discount_Sum__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Discount Provided</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>