Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Current_approver__c.field-meta.xml
<CustomField>
    <fullName>Current_approver__c</fullName>
    <label>Current approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>