Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unique SPRs</relationshipLabel>
    <relationshipName>Unique_SPRs</relationshipName>
    <type>Lookup</type>
</CustomField>