Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/L1_Approver__c.field-meta.xml
<CustomField>
    <fullName>L1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if average is less than 7.5 then approval goes to this user. Project owner initial project approver</description>
    <inlineHelpText>if average is less than 7.5 then approval goes to this user. Project owner initial project approver</inlineHelpText>
    <label>L1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unique_SPRs</relationshipName>
    <type>Lookup</type>
</CustomField>