Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/L2_Approver__c.field-meta.xml
<CustomField>
    <fullName>L2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if average is greater than 7.5 then approval goes to this user. Project owner Project approver</description>
    <inlineHelpText>if average is greater than 7.5 then approval goes to this user. Project owner Project approver</inlineHelpText>
    <label>L2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unique_SPRs1</relationshipName>
    <type>Lookup</type>
</CustomField>