Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/MRP_Post_Discount_Sum__c.field-meta.xml
<CustomField>
    <fullName>MRP_Post_Discount_Sum__c</fullName>
    <description>Sum of the MRP Post Discount from the new offer section. This field is the discount of the product after the APPL Discount</description>
    <label>MRP Post Discount Sum</label>
    <summarizedField>New_Special_Pricing_Request__c.MRP_Post_Discount2__c</summarizedField>
    <summaryForeignKey>New_Special_Pricing_Request__c.Unique_SPR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>