Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Net_Invoice_Value_APPL_Sum__c.field-meta.xml
<CustomField>
    <fullName>Net_Invoice_Value_APPL_Sum__c</fullName>
    <description>Sum of the Net Invoice Value from APPL discount field in the offer section</description>
    <label>Net Invoice Value APPL Sum</label>
    <summarizedField>New_Special_Pricing_Request__c.Net_Invoice_Value_from_APPL2__c</summarizedField>
    <summaryForeignKey>New_Special_Pricing_Request__c.Unique_SPR__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>