Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Number_of_SPR_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SPR_s__c</fullName>
    <description>count the number of spr under a particular record</description>
    <label>Number of SPR&apos;s</label>
    <summaryForeignKey>New_Special_Pricing_Request__c.Unique_SPR__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>