Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Unique SPRs</relationshipLabel>
    <relationshipName>Unique_SPRs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>