Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Project_Link2__c.field-meta.xml
<CustomField>
    <fullName>Project_Link2__c</fullName>
    <formula>HYPERLINK(&apos;&apos;+$Label.Domain_Name_SPR+&apos;/&apos;+Project__r.Id,Project_Name__c )</formula>
    <label>Project Link2</label>
    <type>Text</type>
</CustomField>