Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <formula>Project__r.Project_Number__c</formula>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>