Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Record_App_Rej_By__c.field-meta.xml
<CustomField>
    <fullName>Record_App_Rej_By__c</fullName>
    <description>Captures the name of the user who has approved or rejected this record. Populated through trigger</description>
    <inlineHelpText>Captures the name of the user who has approved or rejected this record. Populated through trigger</inlineHelpText>
    <label>Record App/Rej By</label>
    <length>60</length>
    <type>Text</type>
</CustomField>