Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>