Partial_14Dec2021/force-app/main/default/objects/Unique_SPR__c/fields/Validity_period__c.field-meta.xml
<CustomField>
    <fullName>Validity_period__c</fullName>
    <label>Validity period</label>
    <summarizedField>New_Special_Pricing_Request__c.Validity_for_the_Price__c</summarizedField>
    <summaryForeignKey>New_Special_Pricing_Request__c.Unique_SPR__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>